--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,3 @@
-body,
-html {
-  height: 100%;
-}
-
 body {
 background:
   linear-gradient(
@@ -21,4 +16,7 @@ background:
 	);
 	
 background-blend-mode: screen;
+
+width: 100%;
+height: 100%;
 }
