--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,12 +16,9 @@ background:
 	);
 	
 background-blend-mode: screen;
-
-width: 100%;
-height: 100%;
 }
 
 .gradientBg {
     width: 100%;
-    height: 100%;
+    height: 500px;
 }
