--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,24 +1,14 @@
-body {
-background:
-  linear-gradient(
-		limegreen,
-		transparent
-	),
-	linear-gradient(
-		90deg,
-		skyblue,
-		transparent
-	),
-	linear-gradient(
-		-90deg,
-		coral,
-		transparent
-	);
-	
-background-blend-mode: screen;
-}
-
-.gradientBg {
+.underlay {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 500px;
+    height: 100%;
+    z-index: 10;
+    cursor: pointer;
+    opacity: 0;
+    pointer-events: none
+}
+.top {
+    border-radius: .5rem .5rem 0 0
 }
