--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,13 +1,11 @@
-.underlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 10;
-    cursor: pointer;
-    opacity: 0;
-    pointer-events: none
+* {
+    font-weight: 400;
+    font-style: normal;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    border: 0
 }
 .top {
     border-radius: .5rem .5rem 0 0
