--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,6 +31,11 @@ body {
     margin: 0 auto;
     padding: .25rem
 }
+@media (min-width: 30rem) {
+    .container {
+        padding: 1rem
+    }
+}
 .flex {
     display: -webkit-box;
     display: -webkit-flex;
